--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
 * {
   margin: 0;
   font-family: montserrat;
@@ -61,6 +63,8 @@ img {
   width: 100%;
   height: 100%;
 }
+
+
 
 body {
   -webkit-user-select: none;
